# DockerWithFlask

./: Dockerfile  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
src/: index.py  wsgi.py
src/bookshopapp/: .env  app.py  config.py  extensions.py
src/bookshopapp/migrations/versions/: d436cbafdd22_init_db.py
src/bookshopapp/product/: models.py  repositories.py  resources.py  routes.py  services.py
src/resource/instances/: bookshopapp.sqlite
